# mugglec

./: .gitignore  CHANGELOG.md  CHANGELOG_cn.md  CMakeLists.txt  Doxyfile  README.md  README_cn.md  build.bat  build.sh  build_android.sh  build_docker.sh  coverage.sh  uninstall.sh  version.txt
doc/: CMakeLists.txt
doc/cmake/: mugglec.cmake.in
doc/cn/: log.md  network.md
doc/cn/codes/network/: ip4_tcp_echo_srv_v1.c  ip4_tcp_echo_srv_v2.c
doc/codes/network/: echo_srv_v1.c  ip4_tcp_echo_srv_v2.c  ip4_tcp_echo_srv_v3.c
doc/codes/network/tcp_echo_srv_select/: tcp_echo_srv_select.c
doc/codes/network_foo_v1/foo/: dispatcher.c  dispatcher.h  foo_handle.c  foo_handle.h  foo_msg.h
doc/codes/network_foo_v1/foo_cli/: foo_cli.c  foo_cli_handle.c  foo_cli_handle.h
doc/codes/network_foo_v1/foo_srv/: foo_srv.c  foo_srv_handle.c  foo_srv_handle.h
doc/codes/network_foo_v2/foo/: codec.h  dispatcher.c  dispatcher.h  foo_handle.c  foo_msg.h
doc/codes/network_foo_v2/foo_cli/: foo_cli.c  foo_cli_handle.c
doc/codes/network_foo_v2/foo_srv/: foo_srv.c  foo_srv_handle.c  foo_srv_handle.h
doc/codes/network_foo_v3/foo_srv/: foo_srv.c  foo_srv_handle.c  foo_srv_handle.h
doc/codes/network_simple/echo_srv_v2/: echo_srv_v2.c
doc/codes/network_simple/mcast_recv/: mcast_recv.c
doc/codes/network_simple/mcast_sender/: mcast_sender.c
doc/codes/network_unix/ip4_tcp_echo_srv_v1/: ip4_tcp_echo_srv_v1.c
doc/codes/network_unix/ip4_tcp_echo_srv_v3/: ip4_tcp_echo_srv_v3.c
example/: CMakeLists.txt
example/array_blocking_queue/: example_array_blocking_queue.cpp
example/clog/: example_clog.h
example/crypt_des/: example_crypt_des.c
example/crypt_tdes/: example_crypt_tdes.c
example/double_buffer/: example_double_buffer.cpp
example/getopt/: example_getopt.c
example/log/: example_log.c  example_log.cpp  example_log.h
example/net_async_tcp_serv/: async_serv.c  async_serv_handle.c  async_serv_handle.h
example/net_echo_serv/: echo_serv.c  echo_serv_handle.c  echo_serv_handle.h
example/net_mcast_recv/: net_mcast_recv.c
example/net_str_client/: net_str_client.c  net_str_client_console.c  net_str_client_console.h  net_str_client_handle.c  net_str_client_msg.h
example/net_time_client/: time_client.c  time_client_handle.c  time_client_handle.h
example/net_time_serv/: time_serv.c  time_serv_handle.c  time_serv_handle.h
example/os/: example_os.cpp
example/pro_con_mtx_cond/: pro_con_mtx_cond.c
example/ring_buffer/: example_ring_buffer.cpp
example/ringbuffer/: example_ringbuffer.c  example_ringbuffer.cpp  hello.cpp
example/sem/: example_sem.c
example/singleton/: example_singleton.cpp
example/socket_event_loop/: args.c  args.h  example_event_socket.c  tcp_server.c  tcp_server.h
example/stacktrace/: example_stacktrace.c
example/sys/: example_sys.c
example/tcp_str_client/: tcp_str_client.c  tcp_str_client.cpp
example/tunnel/: example_tunnel.cpp
example/version/: example_version.c
examples/: CMakeLists.txt  readme_cn.md
examples/cmake/: mugglec.cmake.in
examples/src/base/version/: example_version.c
examples/src/crypt/: readme_cn.md
examples/src/crypt/aes/: example_crypt_aes.c
examples/src/crypt/tdes/: example_crypt_tdes.c
examples/src/dsaa/: readme_cn.md
examples/src/dsaa/array_list_add_remove/: array_list_add_remove.c
examples/src/dsaa/array_list_clear/: array_list_clear.c
examples/src/dsaa/array_list_destroy/: array_list_destroy.c
examples/src/dsaa/array_list_find/: array_list_find.c
examples/src/dsaa/avl_tree_add_remove/: avl_tree_add_remove.c
examples/src/dsaa/avl_tree_clear/: avl_tree_clear.c
examples/src/dsaa/avl_tree_destroy/: avl_tree_destroy.c
examples/src/log/: readme_cn.md
examples/src/memory/: readme_cn.md
examples/src/network/: readme_cn.md
examples/src/sync/: readme.md  readme_cn.md
test/: CMakeLists.txt  auto_test.bat  auto_test.sh
test/array_blocking_queue/: unittest_array_blocking_queue.cpp
test/array_list/: unittest_array_list.cpp
test/atomic/: unittest_atomic.cpp
test/avl_tree/: unittest_avl_tree.cpp
test/base_utils/: unittest_base_utils.cpp
test/bytes_buffer/: unittest_bytesbuffer.cpp
test/call_once/: unittest_call_once.cpp
test/channel/: unittest_channel.cpp
test/cpu_affinity/: unittest_cpu_affinity.cpp
test/crypt_aes/: unittest_crypt_aes.cpp
test/crypt_des/: unittest_crypt_des.cpp
test/crypt_tdes/: unittest_crypt_tdes.cpp
test/crypt_utils/: unittest_crypt_utils.cpp
test/endian/: unittest_endian.cpp
test/event_context/: unittest_event_context.cpp
test/event_fd/: unittest_event_fd.cpp
test/event_pipe/: unittest_event_pipe.cpp
test/event_signal/: unittest_event_signal.cpp
test/fast_flow_controller/: unittest_fast_flow_controller.cpp
test/flow_controller/: unittest_flow_controller.cpp
test/futex/: unittest_futex.cpp
test/hash_table/: unittest_hash_table.cpp
test/heap/: unittest_heap.cpp
test/hex/: unittest_hex.cpp
test/linked_list/: unittest_linked_list.cpp
test/log/: unittest_log.cpp
test/log_level/: unittest_log_level.cpp
test/memory_pool/: unittest_memory_pool.cpp
test/mutex/: unittest_mutex.cpp
test/os/: unittest_os.cpp
test/path/: unittest_path.cpp
test/pointer_slot/: unittest_pointer_slot.cpp
test/queue/: unittest_queue.cpp
test/ref_cnt/: unittest_ref_cnt.cpp
test/ring_buffer/: unittest_ringbuffer.cpp
test/ring_memory_pool/: unittest_ring_memory_pool.cpp
test/ringbuffer/: unittest_ringbuffer.cpp
test/shm/: unittest_shm.cpp
test/shm_ringbuf/: unittest_shm_ringbuf.cpp
test/socket_ntop/: unittest_socket_ntop.cpp
test/sort/: unittest_sort.cpp
test/sowr_memory_pool/: unittest_sowr_memory_pool.cpp
test/spinlock/: unittest_spinlock.cpp
test/stack/: unittest_stack.cpp
test/str/: unittest_str.cpp
test/sync_obj/: unittest_sync_obj.cpp
test/synclock/: unittest_synclock.cpp
test/thread/: unittest_thread.cpp
test/threadsafe_memory_pool/: unittest_ts_memory_pool.cpp
test/trie/: unittest_trie.cpp
test/unittest/atomic/: unittest_atomic.cpp
test/unittest/file/: unittest_file.cpp
test/unittest/str/: unittest_str.cpp
(+586 files in other folders)
